--- a/EveLib.Tests/EveLib.Tests.fsproj
+++ b/EveLib.Tests/EveLib.Tests.fsproj
@@ -4,14 +4,15 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>62c6543f-788e-480b-ba68-c90ad283308d</ProjectGuid>
+    <ProjectGuid>0cff4110-6d60-4e5c-9936-b56a517e4edd</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>EveLib.RavenCache</RootNamespace>
-    <AssemblyName>EveLib.RavenCache</AssemblyName>
+    <RootNamespace>EveLib.Tests</RootNamespace>
+    <AssemblyName>EveLib.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <Name>EveLib.RavenCache</Name>
+    <Name>EveLib.Tests</Name>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +22,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\EveLib.RavenCache.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\EveLib.Tests.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,7 +31,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\EveLib.RavenCache.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\EveLib.Tests.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
@@ -38,57 +39,41 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <ItemGroup>
-    <Compile Include="RavenExt.fs" />
+    <Compile Include="TestUtils.fs" />
+    <Compile Include="Base.ClientTests.fs" />
+    <Compile Include="Base.CharTests.fs" />
+    <Compile Include="Base.CorpTests.fs" />
     <None Include="Script.fsx" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="AsyncCtpLibrary, Version=1.0.4107.18181, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
-      <Private>True</Private>
-    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=4.0.5.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NLog">
-      <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Raven.Abstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Raven.Client.Debug, Version=1.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Raven.Client.Lightweight, Version=1.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Raven.Client.MvcIntegration, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Activities" />
-    <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.Services.Client" />
-    <Reference Include="System.Device" />
-    <Reference Include="System.DirectoryServices.Protocols" />
-    <Reference Include="System.IdentityModel" />
-    <Reference Include="System.IO.Log" />
-    <Reference Include="System.Net" />
     <Reference Include="System.Numerics" />
-    <Reference Include="System.Runtime.DurableInstancing" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.ServiceModel.Activities" />
-    <Reference Include="System.ServiceModel.Discovery" />
-    <Reference Include="System.Transactions" />
-    <Reference Include="WindowsBase" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="Unquote">
+      <HintPath>..\packages\Unquote.2.1.0\lib\net40\Unquote.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.0.1566\lib\xunit.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <ProjectReference Include="..\EveLib.FileCache\EveLib.FileCache.fsproj">
+      <Name>EveLib.FileCache</Name>
+      <Project>{b7c83ccb-5628-4afb-90ce-31e8d786ce7c}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\EveLib.RavenCache\EveLib.RavenCache.fsproj">
+      <Name>EveLib.RavenCache</Name>
+      <Project>{62c6543f-788e-480b-ba68-c90ad283308d}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\EveLib\EveLib.fsproj">
       <Name>EveLib</Name>
       <Project>{303f3d80-9ffc-4afe-bde0-3431aac6cde3}</Project>
