--- a/EveLib.Tests/EveLib.Tests.fsproj
+++ b/EveLib.Tests/EveLib.Tests.fsproj
@@ -56,14 +56,6 @@
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="Unquote">
-      <HintPath>..\packages\Unquote.2.1.0\lib\net40\Unquote.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="xunit">
-      <HintPath>..\packages\xunit.1.9.0.1566\lib\xunit.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <ProjectReference Include="..\EveLib.FileCache\EveLib.FileCache.fsproj">
       <Name>EveLib.FileCache</Name>
       <Project>{b7c83ccb-5628-4afb-90ce-31e8d786ce7c}</Project>
@@ -79,6 +71,9 @@
       <Project>{303f3d80-9ffc-4afe-bde0-3431aac6cde3}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <Reference Include="xunit, Version=1.9.0.1566, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
